2005-12-05  Tom Tromey  <tromey@redhat.com>

	* java/lang/instrument/Instrumentation.java (redefineClasses): Javadoc
	fix.
	* java/lang/instrument/ClassFileTransformer.java (transform): Javadoc
	fix.

2005-12-04  Nicolas Geoffray  <nicolas.geoffray@menlina.com>

	* vm/reference/java/lang/VMInstrumentationImpl.java
	(redefineClasses): Added an extra parameter of type
	java.lang.instrument.Instrument.
	* java/lang/InstrumentationImpl.java
	(redefineClasses): Added the Instrumentation object
	to the arguments of VMInstrumentationImpl.redefineClasses
	call. 

2005-12-03  Nicolas Geoffray  <nicolas.geoffray@menlina.com>
	
	* java/lang/instrument: New directory.
	* java/lang/instrument/ClassDefinition.java:
	New file.
	* java/lang/instrument/ClassFileTransformer.java:
	New file.
	* java/lang/instrument/IllegalClassFormatException.java:
	New file.
	* java/lang/instrument/Instrumentation.java:
	New file.
	* java/lang/instrument/UnmodifiableClassException.java:
	New file.
	* java/lang/InstrumentationImpl.java:
	New file.
	* vm/reference/java/lang/VMInstrumentationImpl.java:
	New file. 

2005-12-02  Tom Tromey  <tromey@redhat.com>

	* javax/sound/sampled/Port.java (Info): Genericized.
	* javax/sound/sampled/Line.java (Info): Genericized.
	(getLineClass): Likewise.
	* javax/sound/sampled/DataLine.java (Info): Genericized.
	* javax/sound/sampled/AudioFormat.java (AudioFormat): Genericized.
	(properties): Likewise.
	* javax/sound/sampled/AudioFileFormat.java (AudioFileFormat):
	Genericized.
	(properties): Likewise.

2005-12-02  Tom Tromey  <tromey@redhat.com>

	* javax/naming/directory/InitialDirContext.java (search): Genericized.
	* javax/naming/directory/BasicAttributes.java (getAll): Genericized.
	(getIDs): Likewise.
	* javax/naming/directory/BasicAttribute.java (getAll): Fixed return
	type.
	* javax/naming/InitialContext.java: Genericized.
	(list): Likewise.
	(listBindings): Likewise.
	* javax/naming/CompoundName.java (getAll): Genericized.