@@ -1,3 +1,12 @@
+2005-12-05  Casey Marshall <csm@gnu.org>
+
+	* native/jni/classpath/jcl.h (environ): define, or declare
+	'extern.'
+	* native/jni/java-lang/java_lang_VMProcess.c: include <jcl.h>.
+	Remove 'extern' define.
+	* native/jni/java-lang/java_lang_VMSystem.c
+	(Java_java_lang_VMSystem_environ): don't declare 'environ.'
+
 2005-12-05  Tom Tromey  <tromey@redhat.com>
 
 	* java/lang/instrument/Instrumentation.java (redefineClasses): Javadoc
